--- a/main.tex
+++ b/main.tex
@@ -108,9 +108,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%% Begin CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-\makeheading{Abhijeet Bhattacharya}
+\makeheading{\begin{Huge}Abhijeet Bhattacharya \end{Huge} }
 
-\section{Contact Information}
+\section{\textbf{Contact Information}}
 
 \newlength{\rcollength}\setlength{\rcollength}{1.4in}%
 
@@ -118,62 +118,100 @@
 Flat number 71 Vidya Vihar  \hfill {Contact : +91 8527801920} \newline
 Rohini Sec-9 \hfill {e-mail id : \email{bhattacharya399@gmail.com}} \newline
 New Delhi, 110085\hfill  \href{https://github.com/Abhijeet399}{github : https://github.com/Abhijeet399} \newline
-INDIA \hfill \href{https://goo.gl/bs3Snq}{}
+India \hfill \href{https://sites.google.com/view/abhijeet-bhattacharya}{Personal website - Click here}
 
-\section{Education}
+\section{\textbf{Education}}
 \textbf{Bharati Vidyaapeeth's College of Engineering} \hfill{2017-Present}\\
-B.Tech. in Electrical and Electronics\\\\
+B.Tech. in Electrical and Electronics \hfill{CGPA 7.394/10}\\\\
 \textbf{DLDAV Pitampura},\\
 12\textsuperscript{th} C.B.S.E, 90\%\hfill{Jul. 2017}\\
 
-\section{Experience}
-\textbf{Research Summer Intern} \hfill {May 2019---August 2019}\\
-\emph{} \href{http://www.swaayatt-robots.com/}{Swaayatt Robots, Bhopal}\\
-\textbf{Project Intern} \hfill {March 2019---April 2019}\\
-Kausheleisen Company\\
-\textbf{Workshop Head} \hfill {2 Feb 2019---3 Feb 2019}\\
-\emph{} \href{http://innovicon.bvpieeend.com/}{Innovicon, AI Conference}\\
-\textbf{Winter Intern} \hfill {December 2018---Jan 2019}\\
-CSIR-CEERI (NewDelhi)\\
-\textbf{Technical Head} \hfill {4 Oct. 2018}\\
-\emph{} \href{http://sites.ieee.org/sb-bvcoend/wiehack/}{WieHack, Women Hackathon}\\
-\textbf{Trainee} \hfill {May 2018---Aug 2018}\\
-Embedded Systems, IQB Solutions, Delhi
-
-\section{Positions of Responsibility}
+\section{\textbf{Experience}}
 \begin{innerlist}
-\item R.A.U. Head (Robotics and Automation United Head)\hfill {2019 - Present}
+\item \textbf{Remote Research Intern } \hfill {May 2020---Aug 2020}\\
+\emph{} \href{https://nitandhra.ac.in/}{National Institute of Technology(NIT AP)}\\
+ \href{https://nitandhra.ac.in/dept/eee/20164}{\small Advised by - Dr. SRI PHANI KRISHNA KARRI}
+\item \textbf{Summer Research Intern} \hfill {May 2019---August 2019}\\
+\emph{} \href{http://www.swaayatt-robots.com/}{Swaayatt Robots, Bhopal}\\
+\item \textbf{Project Intern} \hfill {March 2019---April 2019}\\
+Kausheleisen Company\\
+\item \textbf{Workshop Head} \hfill {2 Feb 2019---3 Feb 2019}\\
+\emph{} \href{http://innovicon.bvpieeend.com/}{Innovicon, AI Conference}\\
+\item \textbf{Winter Intern} \hfill {December 2018---Jan 2019}\\
+CSIR-CEERI (NewDelhi)\\
+\emph{Advised by :} \href{https://scholar.google.co.in/citations?user=deabq2AAAAAJ&hl=en}{Manoj Sharma}\\
+\item \textbf{Technical Head} \hfill {4 Oct. 2018}\\
+\emph{} \href{http://sites.ieee.org/sb-bvcoend/wiehack/}{WieHack, Women Hackathon}\\
+\item \textbf{Trainee} \hfill {May 2018---Aug 2018}\\
+Embedded Systems, IQB Solutions, Delhi
+\end{innerlist}
+
+\section{ \textbf{Positions of Responsibility}}
+\begin{innerlist}
+\item R.A.U. Head (Robotics and Automation United Head)\hfill {June - Dec 2019}
 \item Robotics Chapter Representative \hfill {2018 - April 2019}
 \begin{innerlist}
-\item Conducted workshops in College to teach programming concepts on Arduino/Raspberry, Image Processing and Project Management to 100+ students.
+\item Conducted workshops in College to teach programming \\concepts on Arduino/Raspberry, Image Processing and \\Project Management to 100+ students.
 \end{innerlist}
 \end{innerlist}
 
-\section{Awards and Scholarships}
+\section{\textbf{Awards and Scholarships}}
 \begin{innerlist}
-\item 2\textsuperscript{nd} in Drones Ideathon I.I.T. Roorkee
+\item 1\textsuperscript{st} runner up in Drones Ideathon I.I.T. Roorkee
 \hfill 2019
-\item  Winner in the East-India's Largest Hackathon HACK-A-BIT organised by BIT-MESRA(URL: \href{https://www.facebook.com/pg/hackabit/posts/}{LINK-CLICK HERE})\hfill 2018
+\item  Winner in the East-India's Largest Hackathon HACK-A-BIT organised \\by BIT-MESRA(URL: \href{https://www.facebook.com/pg/hackabit/posts/}{LINK-CLICK HERE})\hfill 2018
 \item Top 20 in \textbf{eYantra - National Robotics Competition}, \textbf{IIT Bombay}\hfill 2018
 \item Ranked 320 in \textbf{IEEE XTreme Hackathon}\hfill  2018
-\item  Winner in the Rajasthan Digifest Hackathon 5.0 organised by Rajasthan Government.Award Ceremony (2:37:00)(URL: \href{https://www.youtube.com/watch?v=rrQgRlSMAI8&t=9536s}{LINK })(URL: \href{https://twitter.com/DIPRRajasthan/status/1022771192904601601/photo/1}{LINK })(URL: \href{https://inc42.com/buzz/meet-the-winners-of-hackathon-5-0-at-rajasthan-digifest-in-bikaner/}{LINK }) \hfill 2017
+\item  Winner in the Rajasthan Digifest Hackathon 5.0 organised by Rajasthan\\ Government.Award Ceremony (2:37:00)\\(URL: \href{https://www.youtube.com/watch?v=rrQgRlSMAI8&t=9536s}{LINK })(URL: \href{https://twitter.com/DIPRRajasthan/status/1022771192904601601/photo/1}{LINK })(URL: \href{https://inc42.com/buzz/meet-the-winners-of-hackathon-5-0-at-rajasthan-digifest-in-bikaner/}{LINK }) \hfill 2017
 \end{innerlist}
 
-\section{Technical Projects}
+\section{\textbf{Technical Projects}}
 \begin{innerlist}
-    \item \textbf{"Object Detection"} Using YOLO, Mask-RCNN. \hfill {2019}
-    \item \textbf{"Optical flow"} Using Lucas Kanade method. \hfill {2019}
-    \item \textbf{"Depth Mapping"} Using pixel shift on two Cameras. \hfill {2019}
-    \item \textbf{"Semantic Segmentation"} for Indian Road data-sets \hfill {2019}
-    \item \textbf{"CRF"} for segmented images \hfill {2019}
-    \item \textbf{"CARLA"} For data-set collection for semantic segmentation\hfill {2019}
-    \item \textbf{"DEAF TO MUTE COMMUNICATION MODEL"}  \hfill {2018}
-    \item \textbf{"Venom"} Snake-bot for disasters \hfill {2017}
-    \item \textbf{"Attendance"} Attendance based on bio-metric system\hfill {2018}
+    \item \textbf{``Remote Sensing, Satellite Imaging"} Research project. \hfill {2020}
+    \item \textbf{``Prediction of epileptic seizures using EEG signals using CNN+LSTM model"} Research Project. \hfill {2020}
+    \item \textbf{``Prediction of epileptic seizures using EEG signals using Transformer model"} Research Project. \hfill {2020}
+    \item \textbf{``Emotion Recognition"} Using CNN to differentiate 5 emotions. \hfill {2019}
+    \item \textbf{``Image Segmentation from Space"} Using CNN, VGG. \hfill {2019}
+    \item \textbf{``Object Detection"} Using YOLO, Mask-RCNN. \hfill {2019}
+    \item \textbf{``Optical flow"} Using Lucas Kanade method. \hfill {2019}
+    \item \textbf{``Depth Mapping"} Using pixel shift on two Cameras. \hfill {2019}
+    \item \textbf{``Semantic Segmentation"} for Indian Road data-sets \hfill {2019}
+    \item \textbf{``CRF"} for segmented images \hfill {2019}
+    \item \textbf{``CARLA"} For data-set collection for semantic segmentation\hfill {2019}
+    \item \textbf{``Speech to words"} on Raspberry-pi\hfill {2019}
+    \item \textbf{``Nutty Squirrel"} For Eyantra Competition \hfill {2019}
+    \item \textbf{``Handy"} \href{https://www.youtube.com/watch?v=2-FpMcipJoo&feature=youtu.be}{An Integrated deaf and mute conversation smart alert system} \hfill {2018}
+    \item \textbf{``Venom"} Snake-bot for disasters \hfill {2017}
+    \item \textbf{``Attendance"} Attendance based on bio-metric system\hfill {2018}
+    \item \textbf{``Snakebot"} A robot based on movement of snake.\hfill {2018}
+    \item \textbf{``Many Robotic Cars"} Using Arduino, Bluetooth, Mobile.\hfill {2017}
+    \item \textbf{``Home Automation"} Using Arduino, ESP.\hfill {2017}
 \end{innerlist}
 
-\section{Skills and \\Tools}
-Technologies : Micro-controllers & processors, Deep Learning, Computer Vision\\
-Languages : C/C++, Embedded C, Python, MAT-LAB, Open-CV, LaTeX
+\section{\textbf{Publications}}
+\begin{innerlist}
+    \item \textbf{A. Bhattacharya,} T. Baweja, Dr SPK Karri 2020, ``Epileptic seizure prediction using deep transformer model" Int. J. Neural Syst.\hfill {Under Review.}
+    \item \textbf{A. Bhattacharya,} T. Baweja, S. Garg 2020,``Automatic Seizure Prediction using CNN and LSTM" Neural Networks.\hfill {Under Review.}
+    \item \textbf{A. Bhattacharya,} T. Baweja 2020,``Clear-View: A dataset for missing data in RemoteSensing Images." \hfill {Under Review.}
+\end{innerlist}
+
+\section{\textbf{Skills and \\Tools}}
+\textbf{Technologies : }Machine Learning, Deep Learning, Computer Vision, Image Processing, Linear Algebra, Probabilistic Analysis, Micro-controllers and processors\\
+\textbf{Languages : } English, Hindi, Bengali (Spoken).\\
+\textbf{Programming Languages :}C/C++, Embedded C, Python, MAT-LAB, Open-CV, LaTeX\\
+\textbf{Softwares :} Blender, Vrep, Proteus, XCTU, AVR Studios, Atmel Studios, Adobe Photoshop.
+
+\section{\textbf{References}}
+\begin{innerlist}
+\item \textbf{\begin{large}SANJEEV SHARMA\\ \end{large} }\textbf{ CEO of Swaayatt Robots}\\Contact number - +91 8989715787\\Email Address - sanjeevsharma@swaayatt-robots.com
+\\
+\item \textbf{\begin{large}Dr. KUSUM THARANI\\ \end{large}}\textbf{ Head Of Department- E.E.E. at BVCOE}\\Email Address -   kusum.tharani@bharatividyapeeth.edu
+\\
+\item \textbf{\begin{large}SANDEEP BANERJEE\\ 
+\end{large}}\textbf{ Assistant Professor- E.E.E. at BVCOE}\\Email Address -   sandeepbanerjee25@gmail.com\\
+
+\item \textbf{\begin{large}Dr. SRI PHANI KRISHNA KARRI\\ 
+\end{large}}\textbf{ Assistant Professor- E.E NIT, AP}\\Email Address -   phani.moresmiles@gmail.com
+\end{innerlist}
 
 \end{document}
